--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
 		"lint:pkg-json": "wp-scripts lint-pkg-json",
 		"packages-update": "wp-scripts packages-update",
 		"postinstall": "npx lefthook install",
-		"preinstall": ". ~/.nvm/nvm.sh && nvm install && nvm use",
+		"preinstall": "if [ -z \"$CI\" ]; then . ~/.nvm/nvm.sh && nvm install && nvm use; fi",
 		"report": "composer run-script report",
 		"reset": "rm -rf node_modules vendor build package-lock.json composer.lock",
 		"setup": "npm run reset && npm i && composer i && npm run build",
