--- a/package.json
+++ b/package.json
@@ -32,12 +32,19 @@
 		"clean-webpack-plugin": "^4.0.0",
 		"copy-webpack-plugin": "^12.0.2",
 		"cross-env": "^7.0.3",
+		"css-minimizer-webpack-plugin": "^7.0.0",
 		"eslint-plugin-eslint-comments": "3.2.0",
 		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-webpack-plugin": "^4.2.0",
 		"glob": "^10.4.1",
 		"html_codesniffer": "2.5.1",
+		"image-minimizer-webpack-plugin": "^4.0.2",
 		"image-webpack-loader": "^8.1.0",
+		"imagemin": "^9.0.0",
+		"imagemin-jpegtran": "^7.0.0",
+		"imagemin-mozjpeg": "^10.0.0",
+		"imagemin-optipng": "^8.0.0",
+		"imagemin-svgo": "^11.0.0",
 		"inquirer": "^9.2.22",
 		"lint-staged": "15.2.4",
 		"mini-css-extract-plugin": "^2.9.0",
@@ -49,30 +56,35 @@
 		"postcss-rtl": "^2.0.0",
 		"prettier": "3.2.5",
 		"puppeteer-core": "22.10.0",
+		"remove-files-webpack-plugin": "^1.5.0",
 		"sass-loader": "^14.2.1",
 		"stylelint-webpack-plugin": "^5.0.1",
 		"svg-spritemap-webpack-plugin": "^4.5.0",
 		"svg-transform-loader": "^2.0.13",
+		"terser-webpack-plugin": "^5.3.10",
 		"webpack-cli": "^5.1.4"
 	},
 	"scripts": {
 		"a11y": "node a11y.cjs",
 		"build": "wp-scripts build --stats-error-details --progress",
+		"build:blocks": "wp-scripts build --config ./webpack.config.js --webpack-src-dir=assets/blocks",
+		"create-block": "cd ./assets/blocks && npx @wordpress/create-block --no-plugin",
+		"create-block:dynamic": "cd ./assets/blocks && npx @wordpress/create-block --no-plugin --variant=dynamic",
 		"format": "wp-scripts format && npm run format:php",
 		"format:css": "wp-scripts format-style",
-		"format:php": "composer run-script fix",
+		"format:php": "composer run-script phpcs-fix",
 		"lint": "run-p lint:*",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
 		"lint:md:docs": "wp-scripts lint-md-docs",
-		"lint:php": "composer run-script lint",
+		"lint:php": "composer run-script phpcs",
 		"lint:pkg-json": "wp-scripts lint-pkg-json",
 		"packages-update": "wp-scripts packages-update",
 		"postinstall": "npx lefthook install",
 		"preinstall": "cross-env npm_config_legacy_peer_deps=false",
 		"reset": "rm -rf node_modules vendor build package-lock.json composer.lock",
 		"setup": "npm run reset && npm i && composer i && npm run build",
-		"start": "wp-scripts start"
+		"start": "wp-scripts start --config ./webpack.config.js --webpack-src-dir=assets/blocks"
 	},
 	"lint-staged": {
 		"*.js": [
