--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
 		"composer/installers": "^2.2.0"
 	},
 	"require-dev": {
+		"php": ">=8.0",
 		"dealerdirect/phpcodesniffer-composer-installer": "^1.0.0",
 		"phpcompatibility/phpcompatibility-wp": "^2.1.4",
 		"squizlabs/php_codesniffer": "^3.10.1",
@@ -32,7 +33,7 @@
 		"wp-coding-standards/wpcs": "^3.1.0"
 	},
 	"scripts": {
-		"fix": "./vendor/bin/phpcbf --report=summary,source",
-		"lint": "./vendor/bin/phpcs --report=summary,source"
+		"phpcs": "./vendor/bin/phpcs --report=summary,source",
+		"phpcs-fix": "./vendor/bin/phpcbf --report=summary,source"
 	}
 }
