--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
 		"npm": ">=10"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.24.7",
 		"@babel/plugin-transform-class-static-block": "7.24.6",
+		"@babel/preset-env": "^7.24.7",
+		"@babel/preset-react": "^7.24.7",
 		"@evilmartians/lefthook": "1.6.12",
 		"@wordpress/env": "^9.10.0",
 		"@wordpress/eslint-plugin": "^18.1.0",
 		"@wordpress/prettier-config": "^3.15.0",
 		"@wordpress/scripts": "^27.9.0",
 		"autoprefixer": "^10.4.19",
+		"babel-loader": "^9.1.3",
 		"clean-webpack-plugin": "^4.0.0",
 		"copy-webpack-plugin": "^12.0.2",
 		"cross-env": "^7.0.3",
@@ -62,14 +66,13 @@
 		"svg-spritemap-webpack-plugin": "^4.5.0",
 		"svg-transform-loader": "^2.0.13",
 		"terser-webpack-plugin": "^5.3.10",
+		"webpack": "^5.92.0",
 		"webpack-cli": "^5.1.4"
 	},
 	"scripts": {
 		"a11y": "node a11y.cjs",
-		"build": "wp-scripts build --stats-error-details --progress",
-		"build:blocks": "wp-scripts build --config ./webpack.config.js --webpack-src-dir=assets/blocks",
-		"create-block": "cd ./assets/blocks && npx @wordpress/create-block --no-plugin",
-		"create-block:dynamic": "cd ./assets/blocks && npx @wordpress/create-block --no-plugin --variant=dynamic",
+		"build": "wp-scripts build --config webpack.config.js --webpack-src-dir=assets/blocks",
+		"create-block": "cd ./assets/blocks && npx @wordpress/create-block --namespace=wdsbt --template ../../inc/block-template --no-plugin",
 		"format": "wp-scripts format && npm run format:php",
 		"format:css": "wp-scripts format-style",
 		"format:php": "composer run-script phpcs-fix",
@@ -82,9 +85,9 @@
 		"packages-update": "wp-scripts packages-update",
 		"postinstall": "npx lefthook install",
 		"preinstall": "cross-env npm_config_legacy_peer_deps=false",
-		"reset": "rm -rf node_modules vendor build package-lock.json composer.lock",
+		"reset": "rm -rf node_modules vendor build blocks package-lock.json composer.lock",
 		"setup": "npm run reset && npm i && composer i && npm run build",
-		"start": "wp-scripts start --config ./webpack.config.js --webpack-src-dir=assets/blocks"
+		"start": "cross-env NODE_ENV=development wp-scripts start"
 	},
 	"lint-staged": {
 		"*.js": [
@@ -96,5 +99,8 @@
 		"*.scss": [
 			"wp-scripts lint-style"
 		]
+	},
+	"dependencies": {
+		"svgo": "^3.3.2"
 	}
 }
