--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -26,6 +26,9 @@
 	<!-- Only sniff the theme. -->
 	<file>./</file>
 
+	<!-- Exclude the blocks directory. -->
+	<exclude-pattern>/blocks/*</exclude-pattern>
+
 	<!-- Exclude the build directory. -->
 	<exclude-pattern>/build/*</exclude-pattern>
 
