Add static block variation and update create block script

--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
 	"scripts": {
 		"a11y": "node a11y.cjs",
 		"build": "wp-scripts build --config webpack.config.js --webpack-src-dir=assets/blocks --stats-error-details --progress",
-		"create-block": "cd ./assets/blocks && npx @wordpress/create-block --namespace=wdsbt --template ../../inc/block-template --no-plugin",
+		"create-block": "run-s create-block:run",
+    	"create-block:run": "cd ./assets/blocks && npx @wordpress/create-block --namespace=wdsbt --template ../../inc/block-template --no-plugin",
 		"format": "wp-scripts format && npm run format:php",
 		"format:css": "wp-scripts format-style",
 		"format:php": "composer run-script phpcs-fix",
