--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -27,7 +27,7 @@
 	<file>./</file>
 
 	<!-- Exclude the blocks directory. -->
-	<exclude-pattern>/blocks/*</exclude-pattern>
+	<exclude-pattern>./blocks/*</exclude-pattern>
 
 	<!-- Exclude the build directory. -->
 	<exclude-pattern>/build/*</exclude-pattern>
