Update workflow to only run on pull requests

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,20 +1,13 @@
 name: Security
 
 on:
-    # Run on all pushes and on all pull requests.
-    push:
-    pull_request:
-    # Also run this workflow every Monday at 6:00.
-    schedule:
-        - cron: '0 6 * * 1'
-    # Allow manually triggering the workflow.
-    workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
-# Cancels all previous workflow runs for the same branch that have not yet completed.
 concurrency:
-    # The concurrency group contains the workflow name and the branch name.
-    group: ${{ github.workflow }}-${{ github.ref }}
-    cancel-in-progress: true
+  group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.head_ref || github.ref }}
+  cancel-in-progress: true
 
 jobs:
     security:
