WDSBT-23 - Update npm packages

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
 	"name": "webdevstudios/wds-bt",
+	"version": "1.0.0",
 	"description": "A block starter theme from WebDevStudios.",
 	"type": "wordpress-theme",
 	"license": "GPL-2.0-or-later",
