--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -14,7 +14,6 @@ jobs:
     name: 'Security Check'
     runs-on: ubuntu-latest
 
-    # Don't run the cronjob in this workflow on forks.
     if: github.event_name != 'schedule' || (github.event_name == 'schedule' && github.repository_owner == 'webdevstudios')
 
     steps:
@@ -37,7 +36,7 @@ jobs:
         with:
           lock: ./composer.lock
           format: ansi
-          disable-exit-code: true # Prevents pipeline failures on warnings
+          disable-exit-code: true
 
       - name: Post Security Check Summary
         if: always()
