--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -14,6 +14,7 @@ jobs:
     name: 'Security Check'
     runs-on: ubuntu-latest
 
+    # Ensure the cron job runs only on the main repository, not forks.
     if: github.event_name != 'schedule' || (github.event_name == 'schedule' && github.repository_owner == 'webdevstudios')
 
     steps:
@@ -21,6 +22,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Cache Composer dependencies
+        # Automatically uses Node.js 20 after March 2024
         uses: actions/cache@v3
         with:
           path: ~/.composer/cache
