--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "prettier": "3.3.3",
     "puppeteer-core": "23.1.1",
     "remove-files-webpack-plugin": "^1.5.0",
+    "rimraf": "^6.0.1",
     "sass-loader": "^16.0.1",
     "stylelint-webpack-plugin": "^5.0.1",
     "svg-spritemap-webpack-plugin": "^4.5.1",
