--- a/package.json
+++ b/package.json
@@ -1,125 +1,125 @@
 {
-  "name": "wds-bt",
-  "version": "1.0.0",
-  "private": true,
-  "description": "A starter block theme from WebDevStudios.",
-  "author": "WebDevStudios <contact@webdevstudios.com>",
-  "license": "GPL-2.0-or-later",
-  "keywords": [
-    "WordPress",
-    "Theme"
-  ],
-  "homepage": "https://github.com/WebDevStudios/wds-bt/#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/WebDevStudios/wds-bt.git"
-  },
-  "bugs": {
-    "url": "https://github.com/WebDevStudios/wds-bt/issues"
-  },
-  "engines": {
-    "node": ">=20",
-    "npm": ">=10"
-  },
-  "dependencies": {
-    "@wordpress/block-editor": "^14.12.0",
-    "@wordpress/blocks": "^14.6.0",
-    "@wordpress/components": "^29.3.0",
-    "@wordpress/compose": "^7.17.0",
-    "@wordpress/hooks": "^4.17.0",
-    "@wordpress/i18n": "^5.17.0",
-    "@wordpress/token-list": "^3.17.0",
-    "body-parser": "^1.20.3",
-    "braces": "^3.0.3",
-    "cookie": "^1.0.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "got": "^14.4.4",
-    "postcss": "^8.4.47",
-    "send": "^1.1.0",
-    "serve-static": "^1.16.2",
-    "svgo": "^3.3.2",
-    "ws": "^8.18.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/plugin-transform-class-static-block": "7.24.7",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/preset-react": "^7.24.7",
-    "@evilmartians/lefthook": "1.7.14",
-    "@wordpress/env": "^10.6.0",
-    "@wordpress/eslint-plugin": "^20.3.0",
-    "@wordpress/prettier-config": "^4.6.0",
-    "@wordpress/scripts": "^28.6.0",
-    "autoprefixer": "^10.4.20",
-    "babel-loader": "^9.1.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^12.0.2",
-    "cross-env": "^7.0.3",
-    "css-minimizer-webpack-plugin": "^7.0.0",
-    "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-webpack-plugin": "^4.2.0",
-    "glob": "^11.0.0",
-    "html_codesniffer": "2.5.1",
-    "image-minimizer-webpack-plugin": "^4.1.0",
-    "image-webpack-loader": "^8.1.0",
-    "imagemin": "^9.0.0",
-    "imagemin-jpegtran": "^7.0.0",
-    "imagemin-mozjpeg": "^10.0.0",
-    "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^11.0.1",
-    "inquirer": "^10.1.8",
-    "lint-staged": "15.2.9",
-    "mini-css-extract-plugin": "^2.9.1",
-    "npm-run-all": "4.1.5",
-    "pa11y-ci": "^3.1.0",
-    "postcss-loader": "^8.1.1",
-    "postcss-move-props-to-bg-image-query": "^4.0.0",
-    "postcss-preset-env": "^10.0.2",
-    "postcss-rtl": "^2.0.0",
-    "prettier": "3.3.3",
-    "puppeteer-core": "23.1.1",
-    "remove-files-webpack-plugin": "^1.5.0",
-    "rimraf": "^6.0.1",
-    "sass-loader": "^16.0.1",
-    "stylelint-webpack-plugin": "^5.0.1",
-    "svg-spritemap-webpack-plugin": "^4.5.1",
-    "svg-transform-loader": "^2.0.13",
-    "terser-webpack-plugin": "^5.3.10",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4"
-  },
-  "scripts": {
-    "a11y": "node a11y.cjs",
-    "build": "rm -rf build blocks && wp-scripts build --config webpack.config.js --webpack-src-dir=assets/blocks --stats-error-details --progress",
-    "create-block": "run-s create-block:run",
-    "create-block:run": "cd ./assets/blocks && npx @wordpress/create-block --namespace=wdsbt --template ../../inc/block-template --no-plugin",
-    "format": "wp-scripts format && npm run format:php",
-    "format:css": "wp-scripts format-style",
-    "format:php": "composer run-script phpcs-fix",
-    "lint": "run-p lint:*",
-    "lint:css": "wp-scripts lint-style",
-    "lint:js": "wp-scripts lint-js",
-    "lint:md:docs": "wp-scripts lint-md-docs",
-    "lint:php": "composer run-script phpcs",
-    "lint:pkg-json": "wp-scripts lint-pkg-json",
-    "packages-update": "wp-scripts packages-update",
-    "postinstall": "npx lefthook install",
-    "preinstall": "cross-env npm_config_legacy_peer_deps=false",
-    "reset": "rm -rf node_modules vendor build blocks package-lock.json composer.lock",
-    "setup": "npm run reset && npm i && composer i && npm run build",
-    "start": "rm -rf build blocks && cross-env NODE_ENV=development wp-scripts start"
-  },
-  "lint-staged": {
-    "*.js": [
-      "wp-scripts lint-js"
-    ],
-    "*.php": [
-      "composer run lint"
-    ],
-    "*.scss": [
-      "wp-scripts lint-style"
-    ]
-  }
+	"name": "wds-bt",
+	"version": "1.0.0",
+	"private": true,
+	"description": "A starter block theme from WebDevStudios.",
+	"author": "WebDevStudios <contact@webdevstudios.com>",
+	"license": "GPL-2.0-or-later",
+	"keywords": [
+		"WordPress",
+		"Theme"
+	],
+	"homepage": "https://github.com/WebDevStudios/wds-bt/#readme",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/WebDevStudios/wds-bt.git"
+	},
+	"bugs": {
+		"url": "https://github.com/WebDevStudios/wds-bt/issues"
+	},
+	"engines": {
+		"node": ">=20",
+		"npm": ">=10"
+	},
+	"dependencies": {
+		"@wordpress/block-editor": "^14.14.0",
+		"@wordpress/blocks": "^14.8.0",
+		"@wordpress/components": "^29.5.0",
+		"@wordpress/compose": "^7.19.0",
+		"@wordpress/hooks": "^4.19.0",
+		"@wordpress/i18n": "^5.19.0",
+		"@wordpress/token-list": "^3.19.0",
+		"body-parser": "^1.20.3",
+		"braces": "^3.0.3",
+		"cookie": "^1.0.1",
+		"dotenv": "^16.4.5",
+		"express": "^4.21.1",
+		"got": "^14.4.4",
+		"postcss": "^8.4.47",
+		"send": "^1.1.0",
+		"serve-static": "^1.16.2",
+		"svgo": "^3.3.2",
+		"ws": "^8.18.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.25.2",
+		"@babel/plugin-transform-class-static-block": "7.24.7",
+		"@babel/preset-env": "^7.25.4",
+		"@babel/preset-react": "^7.24.7",
+		"@evilmartians/lefthook": "1.7.14",
+		"@wordpress/env": "^10.19.0",
+		"@wordpress/eslint-plugin": "^22.5.0",
+		"@wordpress/prettier-config": "^4.19.0",
+		"@wordpress/scripts": "^30.12.0",
+		"autoprefixer": "^10.4.20",
+		"babel-loader": "^9.1.3",
+		"clean-webpack-plugin": "^4.0.0",
+		"copy-webpack-plugin": "^12.0.2",
+		"cross-env": "^7.0.3",
+		"css-minimizer-webpack-plugin": "^7.0.0",
+		"eslint-plugin-eslint-comments": "3.2.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-webpack-plugin": "^4.2.0",
+		"glob": "^11.0.0",
+		"html_codesniffer": "2.5.1",
+		"image-minimizer-webpack-plugin": "^4.1.0",
+		"image-webpack-loader": "^8.1.0",
+		"imagemin": "^9.0.0",
+		"imagemin-jpegtran": "^7.0.0",
+		"imagemin-mozjpeg": "^10.0.0",
+		"imagemin-optipng": "^8.0.0",
+		"imagemin-svgo": "^11.0.1",
+		"inquirer": "^10.1.8",
+		"lint-staged": "15.2.9",
+		"mini-css-extract-plugin": "^2.9.1",
+		"npm-run-all": "4.1.5",
+		"pa11y-ci": "^3.1.0",
+		"postcss-loader": "^8.1.1",
+		"postcss-move-props-to-bg-image-query": "^4.0.0",
+		"postcss-preset-env": "^10.0.2",
+		"postcss-rtl": "^2.0.0",
+		"prettier": "3.3.3",
+		"puppeteer-core": "23.1.1",
+		"remove-files-webpack-plugin": "^1.5.0",
+		"rimraf": "^6.0.1",
+		"sass-loader": "^16.0.1",
+		"stylelint-webpack-plugin": "^5.0.1",
+		"svg-spritemap-webpack-plugin": "^4.5.1",
+		"svg-transform-loader": "^2.0.13",
+		"terser-webpack-plugin": "^5.3.10",
+		"webpack": "^5.94.0",
+		"webpack-cli": "^5.1.4"
+	},
+	"scripts": {
+		"a11y": "node a11y.cjs",
+		"build": "rm -rf build blocks && wp-scripts build --config webpack.config.js --webpack-src-dir=assets/blocks --stats-error-details --progress",
+		"create-block": "run-s create-block:run",
+		"create-block:run": "cd ./assets/blocks && npx @wordpress/create-block --namespace=wdsbt --template ../../inc/block-template --no-plugin",
+		"format": "wp-scripts format && npm run format:php",
+		"format:css": "wp-scripts format ./assets/**/*.scss",
+		"format:php": "composer run-script phpcs-fix",
+		"lint": "run-p lint:*",
+		"lint:css": "wp-scripts lint-style",
+		"lint:js": "wp-scripts lint-js",
+		"lint:md:docs": "wp-scripts lint-md-docs",
+		"lint:php": "composer run-script phpcs",
+		"lint:pkg-json": "wp-scripts lint-pkg-json",
+		"packages-update": "wp-scripts packages-update",
+		"postinstall": "npx lefthook install",
+		"preinstall": "cross-env npm_config_legacy_peer_deps=false",
+		"reset": "rm -rf node_modules vendor build blocks package-lock.json composer.lock",
+		"setup": "npm run reset && npm i && composer i && npm run build",
+		"start": "rm -rf build blocks && cross-env NODE_ENV=development wp-scripts start"
+	},
+	"lint-staged": {
+		"*.js": [
+			"wp-scripts lint-js"
+		],
+		"*.php": [
+			"composer run lint"
+		],
+		"*.scss": [
+			"wp-scripts lint-style"
+		]
+	}
 }
