WDSBT-227 - Update styles to fix linters with stylelint 16

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,8 +2,8 @@
 	"extends": ["@wordpress/stylelint-config/scss"],
 	"rules": {
 		"declaration-no-important": true,
-		"no-descending-specificity": false,
-		"selector-class-pattern": false,
+		"no-descending-specificity": null,
+		"selector-class-pattern": null,
 		"scss/at-rule-no-unknown": [
 			true,
 			{
