--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "wds-bt",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"private": true,
 	"description": "A starter block theme from WebDevStudios.",
 	"author": "WebDevStudios <contact@webdevstudios.com>",
@@ -19,7 +19,7 @@
 	},
 	"engines": {
 		"node": ">=20",
-		"npm": ">=10"
+		"npm": ">=11"
 	},
 	"dependencies": {
 		"@wordpress/block-editor": "^14.14.0",
@@ -31,63 +31,66 @@
 		"@wordpress/token-list": "^3.19.0",
 		"body-parser": "^1.20.3",
 		"braces": "^3.0.3",
-		"cookie": "^1.0.1",
-		"dotenv": "^16.4.5",
-		"express": "^4.21.1",
-		"got": "^14.4.4",
-		"postcss": "^8.4.47",
+		"cookie": "^1.0.2",
+		"dotenv": "^16.4.7",
+		"express": "^4.21.2",
+		"got": "^14.4.6",
+		"npm": "^11.1.0",
+		"postcss": "^8.5.3",
 		"send": "^1.1.0",
 		"serve-static": "^1.16.2",
 		"svgo": "^3.3.2",
-		"ws": "^8.18.0"
+		"ws": "^8.18.1"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.25.2",
-		"@babel/plugin-transform-class-static-block": "7.24.7",
-		"@babel/preset-env": "^7.25.4",
-		"@babel/preset-react": "^7.24.7",
-		"@evilmartians/lefthook": "1.7.14",
+		"@babel/core": "^7.26.9",
+		"@babel/plugin-transform-class-static-block": "7.26.0",
+		"@babel/preset-env": "^7.26.9",
+		"@babel/preset-react": "^7.26.3",
+		"@evilmartians/lefthook": "1.11.2",
+		"@wordpress/dependency-extraction-webpack-plugin": "^6.19.0",
 		"@wordpress/env": "^10.19.0",
 		"@wordpress/eslint-plugin": "^22.5.0",
 		"@wordpress/prettier-config": "^4.19.0",
 		"@wordpress/scripts": "^30.12.0",
 		"autoprefixer": "^10.4.20",
-		"babel-loader": "^9.1.3",
+		"babel-loader": "^10.0.0",
 		"clean-webpack-plugin": "^4.0.0",
-		"copy-webpack-plugin": "^12.0.2",
+		"copy-webpack-plugin": "^13.0.0",
 		"cross-env": "^7.0.3",
 		"css-minimizer-webpack-plugin": "^7.0.0",
 		"eslint-plugin-eslint-comments": "3.2.0",
-		"eslint-plugin-prettier": "^5.2.1",
-		"eslint-webpack-plugin": "^4.2.0",
-		"glob": "^11.0.0",
+		"eslint-plugin-prettier": "^5.2.3",
+		"eslint-webpack-plugin": "^5.0.0",
+		"glob": "^11.0.1",
 		"html_codesniffer": "2.5.1",
 		"image-minimizer-webpack-plugin": "^4.1.3",
 		"imagemin": "^9.0.0",
-		"imagemin-jpegtran": "^7.0.0",
+		"imagemin-gifsicle": "^7.0.0",
+		"imagemin-jpegtran": "^8.0.0",
 		"imagemin-mozjpeg": "^10.0.0",
 		"imagemin-optipng": "^8.0.0",
 		"imagemin-svgo": "^11.0.1",
-		"inquirer": "^10.1.8",
-		"lint-staged": "15.2.9",
-		"mini-css-extract-plugin": "^2.9.1",
+		"inquirer": "^12.4.2",
+		"lint-staged": "15.4.3",
+		"mini-css-extract-plugin": "^2.9.2",
 		"npm-run-all": "4.1.5",
 		"pa11y-ci": "^3.1.0",
 		"postcss-loader": "^8.1.1",
 		"postcss-move-props-to-bg-image-query": "^4.0.0",
-		"postcss-preset-env": "^10.0.2",
+		"postcss-preset-env": "^10.1.5",
 		"postcss-rtl": "^2.0.0",
-		"prettier": "3.3.3",
-		"puppeteer-core": "23.1.1",
+		"prettier": "3.5.3",
+		"puppeteer-core": "24.3.1",
 		"remove-files-webpack-plugin": "^1.5.0",
 		"rimraf": "^6.0.1",
-		"sass-loader": "^16.0.1",
+		"sass-loader": "^16.0.5",
 		"stylelint-webpack-plugin": "^5.0.1",
-		"svg-spritemap-webpack-plugin": "^4.5.1",
+		"svg-spritemap-webpack-plugin": "^4.7.0",
 		"svg-transform-loader": "^2.0.13",
-		"terser-webpack-plugin": "^5.3.10",
-		"webpack": "^5.94.0",
-		"webpack-cli": "^5.1.4"
+		"terser-webpack-plugin": "^5.3.12",
+		"webpack": "^5.98.0",
+		"webpack-cli": "^6.0.1"
 	},
 	"scripts": {
 		"a11y": "node a11y.cjs",
