--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"send": "^1.1.0",
 		"serve-static": "^1.16.2",
 		"svgo": "^3.3.2",
-		"ws": "^8.18.1"
+		"ws": "^8.18.1",
+		"xml2js": "^0.6.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.26.9",
