Add missing slug for search and replace

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -76,7 +76,7 @@
 		 Multiple valid prefixes can be provided as a comma-delimited list. -->
 	<rule ref="WordPress.NamingConventions.PrefixAllGlobals">
 		<properties>
-			<property name="prefixes" type="array" value="WebDevStudios\wdsbt,wds" />
+			<property name="prefixes" type="array" value="WebDevStudios\wdsbt,wds,wdsbt" />
 		</properties>
 	</rule>
 
