--- a/package.json
+++ b/package.json
@@ -22,60 +22,64 @@
     "npm": ">=11"
   },
   "dependencies": {
-    "@wordpress/block-editor": "^14.14.0",
-    "@wordpress/blocks": "^14.8.0",
-    "@wordpress/components": "^29.5.0",
-    "@wordpress/compose": "^7.19.0",
-    "@wordpress/hooks": "^4.19.0",
-    "@wordpress/i18n": "^5.19.0",
-    "@wordpress/token-list": "^3.19.0",
-    "body-parser": "^1.20.3",
+    "@wordpress/block-editor": "^14.16.0",
+    "@wordpress/blocks": "^14.10.0",
+    "@wordpress/components": "^29.7.0",
+    "@wordpress/compose": "^7.21.0",
+    "@wordpress/hooks": "^4.21.0",
+    "@wordpress/i18n": "^5.21.0",
+    "@wordpress/token-list": "^3.21.0",
+    "body-parser": "^2.2.0",
     "braces": "^3.0.3",
     "cookie": "^1.0.2",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "got": "^14.4.6",
+    "express": "^5.1.0",
+    "got": "^14.4.7",
     "npm": "^11.1.0",
     "postcss": "^8.5.3",
-    "send": "^1.1.0",
-    "serve-static": "^1.16.2",
+    "send": "^1.2.0",
+    "serve-static": "^2.2.0",
     "svgo": "^3.3.2",
+    "uuid": "^9.0.1",
     "ws": "^8.18.1",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.9",
+    "@babel/core": "^7.26.10",
     "@babel/plugin-transform-class-static-block": "7.26.0",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
-    "@evilmartians/lefthook": "1.11.2",
-    "@wordpress/dependency-extraction-webpack-plugin": "^6.19.0",
-    "@wordpress/env": "^10.19.0",
-    "@wordpress/eslint-plugin": "^22.5.0",
-    "@wordpress/prettier-config": "^4.19.0",
-    "@wordpress/scripts": "^30.12.0",
-    "autoprefixer": "^10.4.20",
+    "@evilmartians/lefthook": "^1.11.6",
+    "@wordpress/dependency-extraction-webpack-plugin": "^6.21.0",
+    "@wordpress/env": "^10.21.0",
+    "@wordpress/eslint-plugin": "^22.7.0",
+    "@wordpress/prettier-config": "^4.21.0",
+    "@wordpress/scripts": "^30.14.1",
+    "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^13.0.0",
     "cross-env": "^7.0.3",
-    "css-minimizer-webpack-plugin": "^7.0.0",
+    "css-minimizer-webpack-plugin": "^7.0.2",
     "dotenv-cli": "^8.0.0",
+    "eslint": "8.57.0",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-webpack-plugin": "^5.0.0",
     "glob": "^11.0.1",
     "html_codesniffer": "2.5.1",
     "image-minimizer-webpack-plugin": "^4.1.3",
-    "imagemin": "^9.0.0",
+    "imagemin": "^9.0.1",
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-jpegtran": "^8.0.0",
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^11.0.1",
-    "inquirer": "^12.4.2",
-    "lint-staged": "15.4.3",
+    "inquirer": "^12.5.2",
+    "lint-staged": "15.5.0",
     "mini-css-extract-plugin": "^2.9.2",
+    "npm-check-updates": "^17.1.16",
     "npm-run-all": "4.1.5",
     "pa11y-ci": "^3.1.0",
     "postcss-loader": "^8.1.1",
@@ -83,20 +87,20 @@
     "postcss-preset-env": "^10.1.5",
     "postcss-rtl": "^2.0.0",
     "prettier": "3.5.3",
-    "puppeteer-core": "24.3.1",
+    "puppeteer-core": "24.6.0",
     "remove-files-webpack-plugin": "^1.5.0",
     "rimraf": "^6.0.1",
     "sass-loader": "^16.0.5",
     "stylelint-webpack-plugin": "^5.0.1",
     "svg-spritemap-webpack-plugin": "^4.7.0",
     "svg-transform-loader": "^2.0.13",
-    "terser-webpack-plugin": "^5.3.12",
+    "terser-webpack-plugin": "^5.3.14",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
   },
   "scripts": {
     "a11y": "node a11y.cjs",
-    "build": "rm -rf build blocks && wp-scripts build --config webpack.config.js --webpack-src-dir=assets/blocks --stats-error-details --progress",
+    "build": "rm -rf build blocks && npx wp-scripts build --config webpack.config.js --webpack-src-dir=assets/blocks --stats-error-details --progress",
     "create-block": "run-s create-block:run",
     "create-block:run": "cd ./assets/blocks && npx @wordpress/create-block --namespace=wdsbt --template ../../inc/block-template --no-plugin",
     "format": "wp-scripts format && npm run format:php",
@@ -108,12 +112,12 @@
     "lint:md:docs": "wp-scripts lint-md-docs",
     "lint:php": "composer run-script phpcs",
     "lint:pkg-json": "wp-scripts lint-pkg-json",
-    "packages-update": "wp-scripts packages-update",
+    "packages-update": "npx npm-check-updates -u && npm install && npm dedupe && npm audit fix",
     "postinstall": "npx lefthook install && git config --local core.hooksPath .git/hooks",
-    "preinstall": "cross-env npm_config_legacy_peer_deps=true",
+    "preinstall": "test -x ./node_modules/.bin/cross-env && ./node_modules/.bin/cross-env npm_config_legacy_peer_deps=true || true",
     "reset": "rm -rf node_modules vendor build blocks package-lock.json composer.lock",
-    "setup": "npm run reset && npm i && composer i && npm run build",
-    "start": "rm -rf build blocks && cross-env NODE_ENV=development wp-scripts start",
+    "setup": "npm run reset && npm i && composer i || echo '❌ Composer not found. Please install Composer.' && npm run build",
+    "start": "rm -rf build blocks && npx cross-env NODE_ENV=development wp-scripts start",
     "version-update": "dotenv node updateVersion.js"
   },
   "lint-staged": {
@@ -125,6 +129,12 @@
     ],
     "*.scss": [
       "wp-scripts lint-style"
+    ],
+    "*.json": [
+      "wp-scripts lint-pkg-json"
+    ],
+    "*.md": [
+      "wp-scripts lint-md-docs"
     ]
   }
 }
