--- a/package.json
+++ b/package.json
@@ -108,10 +108,9 @@
 		"format": "wp-scripts format && npm run format:php && npm run format:js",
 		"format:css": "wp-scripts format ./assets/**/*.scss",
 		"format:php": "composer run-script phpcs-fix",
-		"format:js": "npx eslint assets/js --ext .js,.jsx --fix",
 		"lint": "run-p lint:*",
 		"lint:css": "wp-scripts lint-style",
-		"lint:js": "npx eslint assets/js --ext .js,.jsx",
+		"lint:js": "wp-scripts lint-js",
 		"lint:md:docs": "wp-scripts lint-md-docs",
 		"lint:php": "composer run-script phpcs",
 		"lint:pkg-json": "wp-scripts lint-pkg-json",
@@ -124,7 +123,7 @@
 		"version-update": "dotenv node updateVersion.js"
 	},
 	"lint-staged": {
-		"*.js": "npx eslint assets/js --ext .js,.jsx",
+		"*.js": "wp-scripts lint-js",
 		"*.php": "composer run lint",
 		"*.scss": "wp-scripts lint-style",
 		"*.json": "wp-scripts lint-pkg-json",
