--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
 		"format:php": "composer run-script phpcs-fix",
 		"lint": "run-p lint:*",
 		"lint:css": "wp-scripts lint-style",
-		"lint:js": "wp-scripts lint-js --quiet",
+		"lint:js": "wp-scripts lint-js",
 		"lint:md:docs": "wp-scripts lint-md-docs",
 		"lint:php": "composer run-script phpcs",
 		"lint:pkg-json": "wp-scripts lint-pkg-json",
