WDSBT-251: modernize linting configs and resolve deprecated sniffs

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@babel/preset-env": "^7.27.2",
 		"@babel/preset-react": "^7.27.1",
 		"@evilmartians/lefthook": "^1.11.14",
+		"@typescript-eslint/eslint-plugin": "^8.34.1",
 		"@wordpress/dependency-extraction-webpack-plugin": "^6.25.0",
 		"@wordpress/env": "^10.25.0",
 		"@wordpress/eslint-plugin": "^22.11.0",
@@ -63,7 +64,7 @@
 		"cross-env": "^7.0.3",
 		"css-minimizer-webpack-plugin": "^7.0.2",
 		"dotenv-cli": "^8.0.0",
-		"eslint": "^9.29.0",
+		"eslint": "^8.57.1",
 		"eslint-plugin-eslint-comments": "3.2.0",
 		"eslint-plugin-prettier": "^5.5.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
