--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,9 @@
     ],
     "phpcs-fix": [
       "@php vendor/bin/phpcbf --report=summary,source"
+    ],
+    "post-install-cmd": [
+      "./scripts/update-cursorrules.sh"
     ]
   },
   "version": "1.3.0"
